adding vercel domain